error.txt

C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052>gradlew build

> Task :architectureReview

===============================================================
================ PEER REVIEW AUTOMATIZADO ====================
===============================================================

≡ƒôü Proyecto: tnd-msa-sp-orqclientes0052
≡ƒôè Threshold Configurado: 7 / 10

---------------------------------------------------------------
≡ƒÅù∩╕Å  ARQUITECTURA:
   Estilo detectado: HEXAGONAL
   Archivos analizados: 92
   Paquetes encontrados: 25
   Java 21: Γ£à

   ≡ƒôè Desglose de puntos:
      ΓÇó Arquitectura: 5 / 5
      ΓÇó Paquetes: 3 / 4
      ΓÇó Nomenclatura: 4 / 7
      ΓÇó Archivos requeridos: 2 / 2

   Puntaje final: 8.2 / 10
   BLOQUEAR PR: NO Γ£à

   Γ£à Todos los archivos requeridos est├ín presentes

   ≡ƒôï Observaciones generales (27):
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.builders': 'OrquestacionRequestBodyFactory' | Archivo: OrquestacionRequestBodyFactory.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.builders': 'OrquestacionResponseAssembler' | Archivo: OrquestacionResponseAssembler.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.port.config': 'OrquestacionConfigurationPort' | Archivo: OrquestacionConfigurationPort.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.port.config': 'OrquestadorSoapErrorPort' | Archivo: OrquestadorSoapErrorPort.java
      ΓÇó [Naming] Clase debe ser CamelCase: '0OrquestacionStrategy' | Archivo: 0OrquestacionStrategy.java
      ΓÇó [Naming] Interface debe terminar en sufijo apropiado (Service, ServicePort, Repository, RepositoryPort, Mapper, Handler, Provider, Factory, Port, PortInput, PortOutput): 'OrquestacionStrategy' | Archivo: OrquestacionStrategy.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.application.service.strategy': 'OrquestacionStrategyResolver' | Archivo: OrquestacionStrategyResolver.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.constants': 'QueryTarjetasDebitCustomersMsFlowConstants' | Archivo: QueryTarjetasDebitCustomersMsFlowConstants.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.dto': 'OrquestacionConfiguration' | Archivo: OrquestacionConfiguration.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.util': 'EsbGenericoUtils' | Archivo: EsbGenericoUtils.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.domain.util': 'EsqlExpressionSupport' | Archivo: EsqlExpressionSupport.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.exception': 'ErrorCatalogConstants' | Archivo: ErrorCatalogConstants.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.config': 'OrquestadorErrorFactory' | Archivo: OrquestadorErrorFactory.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.properties.webclient': 'WebClientProperties' | Archivo: WebClientProperties.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141' | Archivo: BodyInWsClientes0141.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141CriteriosBusqueda' | Archivo: BodyInWsClientes0141CriteriosBusqueda.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'BodyInWsClientes0141Ordenante' | Archivo: BodyInWsClientes0141Ordenante.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'ConsultarTarjetasDebitoCliente01' | Archivo: ConsultarTarjetasDebitoCliente01.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'HeaderIn' | Archivo: HeaderIn.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.request': 'SoapHeader' | Archivo: SoapHeader.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141' | Archivo: BodyOutWsClientes0141.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141Tarjetas' | Archivo: BodyOutWsClientes0141Tarjetas.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'BodyOutWsClientes0141TarjetasTarjeta' | Archivo: BodyOutWsClientes0141TarjetasTarjeta.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'DocumentoOut' | Archivo: DocumentoOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'ErrorOut' | Archivo: ErrorOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'HeaderOut' | Archivo: HeaderOut.java
      ΓÇó [Naming] Sufijo no corresponde al rol por paquete 'com.pichincha.sp.infrastructure.output.adapter.response': 'SoapHeader' | Archivo: SoapHeader.java

   Γ£à Arquitectura aprobada

---------------------------------------------------------------
≡ƒº¬ PRUEBAS UNITARIAS:
   Archivos de test analizados: 0

   Γ¥î ERROR: No se encontraron archivos de pruebas unitarias
   El proyecto DEBE tener pruebas unitarias en src/test/java

   Puntaje final: 0 / 10
   BLOQUEAR PR: SI Γ¥î

   ΓÜá∩╕Å  El proyecto NO tiene pruebas unitarias - Esto es OBLIGATORIO

===============================================================

ΓÜá∩╕Å        PEER REVIEW - ADVERTENCIAS DETECTADAS         ΓÜá∩╕Å

   ΓÜá∩╕Å  Pruebas Unitarias: NO EXISTEN - El proyecto DEBE tener pruebas unitarias

Por favor, revisa y corrige los problemas antes de continuar.

ΓÜá∩╕Å    PEER REVIEW COMPLETADO CON ADVERTENCIAS     ΓÜá∩╕Å


> Task :generateJavaFromWsdl
Generando clases desde: ORQClientes0052.wsdl
   Γ£ô Usando binding global: jaxb-bindings.xml
SLF4J(W): No SLF4J providers were found.
SLF4J(W): Defaulting to no-operation (NOP) logger implementation
SLF4J(W): See https://www.slf4j.org/codes.html#noProviders for further details.
Loading FrontEnd jaxws ...
Loading DataBinding jaxb ...
wsdl2java -d C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\build\generated\sources\wsdl -p com.pichincha.sp.generated -verbose -autoNameResolution -xjc-enableIntrospection -xjc-XautoNameResolution -exsh true -mark-generated -b C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\gradle\wrapper\jaxb-bindings.xml C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\resources\legacy\ORQClientes0052.wsdl
wsdl2java - Apache CXF 4.1.1


> Task :postProcessGeneratedWsdl
Γ£à Post-procesamiento unificado completado

> Task :compileJava FAILED
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:13: error: <identifier> expected
public class 0OrquestacionStrategy implements OrquestacionStrategy {
            ^
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:18: error: illegal start of type
    public 0OrquestacionStrategy(
           ^
C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:18: error: invalid method declaration; return type required
    public 0OrquestacionStrategy(
            ^
3 errors

[Incubating] Problems report is available at: file:///C:/Users/darochar/Documents/pruebas/tnd-msa-sp-orqclientes0052/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:18: error: illegal start of type
      public 0OrquestacionStrategy(
             ^
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:18: error: invalid method declaration; return type required
      public 0OrquestacionStrategy(
              ^
  C:\Users\darochar\Documents\pruebas\tnd-msa-sp-orqclientes0052\src\main\java\com\pichincha\sp\application\service\strategy\0OrquestacionStrategy.java:13: error: <identifier> expected
  public class 0OrquestacionStrategy implements OrquestacionStrategy {
              ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
5 actionable tasks: 5 executed
